# HelpDesk

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 55d9ae81e7f6_init_database.py
app/: main.py
app/api/v1/: auth.py  categories.py  comments.py  tickets.py  users.py
app/core/: config.py  database.py  dependencies.py  redis_client.py  security.py
app/models/: attachment.py  category.py  comment.py  enums.py  sla_rule.py  ticket.py  ticket_history.py  user.py
app/repositories/: category_repo.py  comment_repo.py  sla_repo.py  ticket_history_repo.py  ticket_repo.py  user_repo.py
app/schemas/: attachment.py  category.py  comment.py  sla_rule.py  ticket.py  ticket_history.py  user.py
app/services/: auth_service.py  category_service.py  comment_service.py  sla_service.py  ticket_service.py  user_service.py
app/use_cases/: comment_use_case.py
