[project]
name = "helpdesk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "faststream[redis]>=0.6.7",
    "gunicorn>=26.0.0",
    "orjson>=3.11.9",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]
